[package]
name = "svm-merkle-tree"
version = "0.1.1"
description = "A rust/wasm/svm-compatible merkle tree"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "svm_merkle_tree"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
idl-build = ["anchor-lang/idl-build"]
default = ["standard"]
standard = ["sha2", "sha3", "rayon"]
wasm = ["wasm-bindgen", "sha2", "sha3"]
solana = ["solana-program"]
anchor = ["anchor-lang", "solana"]

[profile.release]
lto = true

[dependencies]
anchor-lang = { version = "0.30.0", optional = true }
solana-program = { version = "1.18.13", optional = true }
rayon = { version = "1.10.0", optional = true }
sha2 = { version = "0.10.8", optional = true }
sha3 = { version = "0.10.8", optional = true }
wasm-bindgen = { version = "0.2.92", optional = true }
hex-literal = "0.4.1"
hex = "0.4.3"
thiserror = "1.0.56"
anyhow = "1.0.83"
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
anchor-lang = { version = "0.30.0" }
solana-program = { version = "1.18.13" }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2.92"
sha2 = "0.10.8"
sha3 = "0.10.8"
